Fix: Adjusted spacing between features

--- a/frontend/src/components/LandingPage.css
+++ b/frontend/src/components/LandingPage.css
@@ -39,7 +39,7 @@
   display: flex;
   justify-content: flex-start;
   margin-top: 50px;
-  margin-right: 10px;
+  /* margin-right: 10px; */
   width: 100%;
   padding: 0 50px;
 }
@@ -49,6 +49,7 @@
   flex-direction: column;
   align-items: center;
   text-align: center;
+  margin: 0 5px;
   width: 30%;
 }
 
